# OCR-Restaurant-checks

./: .env.example  .modal_logs.txt  README.md  pyproject.toml  test_sheet.py
castillo_telegram_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: dev_test.py  google_sheets.py  main.py  ocr_parser.py  settings.py  telegram_api.py
src/castillo_telegram_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
